--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "asset-backstage",
-  "description": "backstage for vue + vuex + vue-router + element-ui",
-  "author": "zhuwenjun",
+  "name": "vue-template",
+  "version": "1.0.0",
+  "description": "new vue-template front end project",
+  "author": "sum_he <15237374870@163.com>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
+    "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
@@ -12,87 +14,102 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "axios": "^0.15.3",
+    "axios": "^0.16.2",
     "element-ui": "2.4.8",
-    "moment": "^2.22.2",
-    "normalize.css": "^6.0.0",
-    "vue": "^2.2.6",
-    "vue-router": "^2.5.2",
-    "vuex": "^2.3.1",
-    "vuex-router-sync": "^4.1.2",
+    "file-saver": "^1.3.3",
+    "less-loader": "^4.0.5",
+    "moment": "^2.18.1",
+    "store": "^2.0.12",
+    "store2": "^2.5.5",
+    "style-loader": "^0.18.2",
+    "vue": "^2.3.3",
+    "vue-pdf": "^3.2.2",
+    "vue-resource": "^1.3.4",
+    "vue-router": "^2.6.0",
+    "vuex": "^2.4.0",
+    "xlsx": "^0.11.10",
     "echarts": "^4.2.0-rc.2"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
+    "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-istanbul": "^3.1.2",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-istanbul": "^4.1.1",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-latest": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
-    "chalk": "^1.1.3",
+    "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.1.4",
+    "cross-env": "^5.0.1",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.14.1",
+    "css-loader": "^0.28.0",
+    "cssnano": "^3.10.0",
+    "eslint": "^3.19.0",
     "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^2.0.7",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-html": "^2.0.0",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^3.0.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "file-loader": "^0.10.0",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
-    "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "inject-loader": "^2.0.1",
+    "inject-loader": "^3.0.0",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
-    "karma-sinon-chai": "^1.2.4",
+    "karma-phantomjs-shim": "^1.4.0",
+    "karma-sinon-chai": "^1.3.1",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
+    "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
-    "node-sass": "^4.5.0",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ora": "^1.1.0",
+    "node-sass": "^4.6.1",
+    "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
+    "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.6.0",
-    "sass-loader": "^6.0.2",
+    "sass-loader": "^6.0.6",
+    "script-loader": "^0.7.2",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
-    "sinon": "^1.17.7",
+    "shelljs": "^0.7.6",
+    "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
-    "url-loader": "^0.5.7",
-    "vue-loader": "^11.3.4",
-    "vue-style-loader": "^2.0.5",
-    "vue-template-compiler": "^2.2.6",
-    "webpack": "^2.2.1",
+    "url-loader": "^0.5.8",
+    "vue-loader": "^12.2.2",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.3.3",
+    "webpack": "^2.7.0",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.0",
+    "vue-pdf": "3.2.2"
   },
   "engines": {
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserlist": [
+  "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
