--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "vue-resource": "^1.3.4",
     "vue-router": "^2.6.0",
     "vuex": "^2.4.0",
-    "xlsx": "^0.11.10",
-    "echarts": "^4.2.0-rc.2"
+    "xlsx": "^0.11.10"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -48,6 +47,7 @@
     "chai": "^3.5.0",
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
+    "compression-webpack-plugin": "1.1.12",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
