--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-ui": "2.4.8",
     "file-saver": "^1.3.3",
     "less-loader": "^4.0.5",
+    "jquery": "^3.3.1",
     "moment": "^2.18.1",
     "store": "^2.0.12",
     "store2": "^2.5.5",
